# MobilityDesign

./: .gitignore  AUTHORS.md  LICENSE  README.md  build.cmd  clean.cmd  settings.json  setup.sh
AirLib/: AirLib.vcxproj  AirLib.vcxproj.filters
AirLib/include/api/: RpcLibAdaptorsBase.hpp  RpcLibClientBase.hpp  VehicleApiBase.hpp  VehicleSimApiBase.hpp  WorldSimApiBase.hpp
AirLib/include/common/: AirSimSettings.hpp  CommonStructs.hpp  EarthUtils.hpp  ImageCaptureBase.hpp
AirLib/include/common/common_utils/: FileSystem.hpp
AirLib/include/physics/: Environment.hpp
AirLib/include/sensors/: SensorBase.hpp  SensorCollection.hpp  SensorFactory.hpp
AirLib/include/sensors/distance/: DistanceSimpleParams.hpp
AirLib/include/sensors/dvl/: DvlBase.hpp  DvlSimple.hpp  DvlSimpleParams.hpp
AirLib/include/sensors/gpu_sidescan_sonar/: GpuSidescanSonarBase.hpp  GpuSidescanSonarSimple.hpp  GpuSidescanSonarSimpleParams.hpp
AirLib/include/sensors/gpu_sonar/: GpuSonarBase.hpp  GpuSonarSimple.hpp  GpuSonarSimpleParams.hpp
AirLib/include/sensors/pressure/: PressureBase.hpp  PressureSimple.hpp  PressureSimpleParams.hpp
AirLib/include/vehicles/asv/: AsvApiFactory.hpp  AsvParams.hpp
AirLib/include/vehicles/asv/api/: AsvApiBase.hpp  AsvCommon.hpp  AsvRpcLibAdaptors.hpp  AsvRpcLibClient.hpp  AsvRpcLibServer.hpp
AirLib/include/vehicles/asv/firmwares/asv_simple/: AsvSimpleApi.hpp
AirLib/include/vehicles/asv/firmwares/physxasv/: PhysXAsvApi.hpp
AirLib/include/vehicles/auv/: AuvApiFactory.hpp  AuvParams.hpp
AirLib/include/vehicles/auv/api/: AuvApiBase.hpp  AuvCommon.hpp  AuvRpcLibAdaptors.hpp  AuvRpcLibClient.hpp  AuvRpcLibServer.hpp
AirLib/include/vehicles/auv/firmwares/auv_simple/: AuvSimpleApi.hpp
AirLib/include/vehicles/car/api/: CarRpcLibAdaptors.hpp
AirLib/include/vehicles/multirotor/api/: MultirotorRpcLibAdaptors.hpp
AirLib/include/vehicles/multirotor/firmwares/mavlink/: MavLinkMultirotorApi.hpp
AirLib/src/api/: RpcLibClientBase.cpp  RpcLibServerBase.cpp
AirLib/src/vehicles/asv/api/: AsvRpcLibClient.cpp  AsvRpcLibServer.cpp
AirLib/src/vehicles/auv/api/: AuvRpcLibClient.cpp  AuvRpcLibServer.cpp
HelloAuv/: HelloAuv.vcxproj  main.cpp
PythonClient/: README.md  setup.py
PythonClient/auv/: hello_auv.py  ocean_current.py  setup_path.py
PythonClient/computer_vision/: capture_ir_segmentation.py  create_ir_segmentation_map.py  cv_capture.py  cv_mode.py  cv_navigate.py  external_camera.py  fov_change.py  getpos.py  ground_truth.py  image_benchmarker.py  objects.py  segmentation.py
PythonClient/detection/: detection.py  setup_path.py
PythonClient/environment/: change_texture_example.py  create_objects.py  light_control.py  plot_markers.py  setup_path.py  unreal_console_commands.py  weather.py
PythonClient/fls/: 2d_annotator.py  3d_annotator.py  bbox2d.py  gpu_sonar.py  pointcloud.py  segmentation.py
PythonClient/furosim/: client.py  types.py
PythonClient/sss/: gpu_sidescan.py  segmentation.py
cmake/: CMakeLists.txt
cmake/AirLib/: CMakeLists.txt
cmake/HelloAuv/: CMakeLists.txt
cmake/cmake-modules/: CommonSetup.cmake
ros/src/furosim_ros_pkgs/: CMakeLists.txt  package.xml
ros/src/furosim_ros_pkgs/include/: furosim_ros_wrapper.h
ros/src/furosim_ros_pkgs/launch/: furosim_node.launch  rviz.launch  static_transforms.launch
ros/src/furosim_ros_pkgs/msg/: DVL.msg  Pressure.msg
ros/src/furosim_ros_pkgs/rviz/: default.rviz
ros/src/furosim_ros_pkgs/src/: furosim_node.cpp  furosim_ros_wrapper.cpp
ros2/: car_teleop.sh
ros2/src/furosim_interfaces/: CMakeLists.txt  package.xml
ros2/src/furosim_interfaces/msg/: DVL.msg  DVLBeam.msg  Pressure.msg  VelCmdGroup.msg
ros2/src/furosim_ros_pkgs/: CMakeLists.txt  README.md  package.xml
ros2/src/furosim_ros_pkgs/include/: furosim_ros_wrapper.h
ros2/src/furosim_ros_pkgs/launch/: car_teleop.launch.py  furosim_node.launch.py  rviz.launch.py
ros2/src/furosim_ros_pkgs/rviz/: default.rviz
ros2/src/furosim_ros_pkgs/src/: furosim_node.cpp  furosim_ros_wrapper.cpp  furosim_settings_parser.cpp
settings_examples/: README.md  auv_basic.json  auv_multi_agent.json  auv_with_didson.json  auv_with_oculus.json  auv_with_sss.json
